--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/RZhangBCIT/Comp2537_Pokemon_One_Two#readme",
   "dependencies": {
+    "ejs": "^3.1.7",
     "express": "^4.18.1"
   }
 }
