--- a/Assignment 2/package.json
+++ b/Assignment 2/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/RZhangBCIT/Comp2537_Pokemon_One_Two#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3"
   }
 }
